# prysm

./: WORKSPACE
beacon-chain/blockchain/: service.go
beacon-chain/blockchain/forkchoice/: BUILD.bazel  process_attestation.go  process_block.go  service.go
beacon-chain/core/blocks/: block_operations.go  block_operations_test.go
beacon-chain/core/helpers/: attestation.go
beacon-chain/db/kv/: attestations.go
beacon-chain/db/store/: attestations.go  block.go  db.go  schema.go  state.go
beacon-chain/sync/initial-sync/: service.go
proto/eth/v1alpha1/: beacon_chain.proto  validator.pb.go
shared/featureconfig/: config.go  config_test.go
shared/testutil/: deposits.go
tools/genesis-state-gen/: main.go
vm/: README.md
vm/wasm/: BUILD.bazel  runner.go
